<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginSideLinearLayout"
    tools:context="com.beluga.AuthClientActivity"
    android:background="@drawable/bg"
    android:gravity="center_vertical|center_horizontal">


    <LinearLayout
        android:id="@+id/loginBgLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="560dp"
        android:background="@drawable/beluga_background"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/tileSideLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:textAlignment="gravity" >

            <TextView
                android:id="@+id/loginpagetitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/Login_Page_Title_Text"
                android:textAlignment="gravity"
                android:textColor="#6ba2af"
                android:textSize="20sp" />

        </LinearLayout>
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/contextSideLinearLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:weightSum="1"
                android:id="@+id/agLogoLinearLayout">

                <ImageView
                    android:layout_width="400sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/advertView"
                    android:focusable="false"
                    android:layout_gravity="top"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/advert"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="1"
                android:id="@+id/loginAccSideLinearLayout"
                android:gravity="center_horizontal">

                <EditText
                    android:layout_width="261dp"
                    android:layout_height="44dp"
                    android:id="@+id/loginAccEditText"
                    android:hint="@string/Enter_Ac_Type"
                    android:singleLine="true"
                    android:maxLength="16"
                    android:background="@drawable/edittext_default_bg"
                    android:drawableLeft="@drawable/guser" />
                <EditText
                    android:layout_width="261dp"
                    android:layout_height="44dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/loginPwdEditText"
                    android:hint="@string/Enter_Pwd_Type"
                    android:maxLength="16"
                    android:background="@drawable/edittext_default_bg"
                    android:drawableLeft="@drawable/gpassword"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSideLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1" >

                <Button
                    android:layout_width="95dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/quick_sign_up_btn"
                    android:background="@drawable/qs_btn_bg"
                    android:text="@string/Quick_Sign_Up_Button_Text"
                    android:textAlignment="gravity"
                    android:textColor="#FFFFFF" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:id="@+id/sign_up_btn"
                    android:background="@drawable/su_btn_bg"
                    android:text="@string/Sign_Up_Button_Text"
                    android:textColor="#FFFFFF" />

                <Button
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:id="@+id/modify_btn"
                    android:background="@drawable/mp_btn_bg"
                    android:text="@string/Modify_Button_Text"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/bottmSideLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
				android:layout_height="wrap_content"  
				android:text="Login with Google"/>
            
            <com.facebook.login.widget.LoginButton
                android:id="@+id/fblogin_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"/>
            
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_bg"
                android:text="@string/Login_Button_Text"
                android:textColor="@color/mb_white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>