<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:weightSum="1"
    tools:context=".Changepassword"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="590dp"
        android:background="@drawable/beluga_background"
        android:id="@+id/loginBgLinearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:textAlignment="gravity"
            android:gravity="bottom"
            android:id="@+id/tileSideLinearLayout">

            <TextView
                android:id="@+id/modpwdpagetitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/modify_Page_Title_Text"
                android:textAlignment="gravity"
                android:textColor="#6ba2af"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:id="@+id/contextSideLinearLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.33">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="31dp"
                    android:id="@+id/modaccTextView"
                    android:text="@string/Enter_Ac_Type"
                    android:textColor="#6ba2af"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/modacctextView"
                    android:textSize="20dp" />


                <TextView
                    android:layout_width="90dp"
                    android:layout_height="31dp"
                    android:id="@+id/modpwdTextView"
                    android:text="@string/Enter_Pwd_Type"
                    android:textColor="#6ba2af"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/modpwdeditText"
                    android:hint="@string/Enter_Pwd_Type"
                    android:background="@drawable/edit_text_default_bg2"
                    android:paddingLeft="10dp" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="31dp"
                    android:id="@+id/modnewpwdTextView"
                    android:text="@string/Enter_New_Pwd_Type"
                    android:textColor="#6ba2af"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/modnewpwdeditText"
                    android:hint="@string/Enter_New_Pwd_Type"
                    android:background="@drawable/edit_text_default_bg2"
                    android:paddingLeft="10dp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="31dp"
                    android:id="@+id/modretypepwdTextView"
                    android:text="@string/Comfirm_New_Pwd_Type"
                    android:textColor="#6ba2af"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/modretypepwdeditText"
                    android:hint="@string/Comfirm_New_Pwd_Type"
                    android:background="@drawable/edit_text_default_bg2"
                    android:paddingLeft="10dp" />

                
                

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottmSideLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
"
            
            <Button
                android:id="@+id/modreturnbtn"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_return_eff"
                android:text="@string/Return_Button_Text"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/modcomfirmbtn"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_confirm_click_eff"
                android:text="@string/Confirm_Button_Text"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
            
        </LinearLayout>

    </LinearLayout>

</LinearLayout>