<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginSideLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient_bg"
    android:fitsSystemWindows="true"
    tools:context="com.beluga.AuthClientActivity" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:background="@drawable/beluga_background_v6" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/advertView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:focusable="false"
                android:src="@drawable/advert" />

            <EditText
                android:id="@+id/loginAccEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                
                android:drawableLeft="@drawable/guser"
                android:ems="10"
                android:hint="@string/Enter_Ac_Type"
                android:maxLength="16"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/loginPwdSideLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/loginPwdEditText"
                    android:layout_width="420dp"
                    android:layout_height="60dp"
                    android:drawableLeft="@drawable/gpassword"
                    android:ems="10"
                    android:hint="@string/Enter_Pwd_Type"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:layout_weight="1" >
                    
                </EditText>

                <Button
                    android:id="@+id/pwd_button"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/pwd_SHOW_Text" 
                    android:layout_weight="1"/>
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/login_btn_bg_v2"
                android:text="@string/Login_Button_Text"
                android:textColor="@color/mb_white"
                android:textSize="30sp" />

        </LinearLayout>
        
    </RelativeLayout>

    

       <FrameLayout
           android:id="@+id/menu_layout"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/scrim"
           android:visibility="invisible" >
        
           <RelativeLayout
               android:id="@+id/menu_Relative_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/white_alpha" >

                 <TextView
	                android:id="@+id/modify_tv"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/Modify_Button_Text"
	                android:textAlignment="gravity"
	                android:textSize="15sp" 
	                android:layout_alignParentBottom="true"
	      	    	android:layout_alignParentRight="true"
	      	    	android:layout_marginBottom="365dp"
	      	    	android:layout_marginRight="120dp"
	      	    	android:textColor="@color/secondary_text"
            	     android:background="@drawable/label_bg"/>
                 
                <ImageButton
                    android:id="@+id/modify_btn"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="350dp"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/mod_circle_bg"
                    android:src="@drawable/w_mod"
                    android:textColor="#FFFFFF" />
                
                
                <TextView
	                android:id="@+id/fblogin_tv"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/FB_BUTTON_LABEL_TEXT"
	                android:textAlignment="gravity"
	                android:textSize="15sp" 
	                android:layout_alignParentBottom="true"
	      	    	android:layout_alignParentRight="true"
	      	    	android:layout_marginBottom="305dp"
	      	    	android:layout_marginRight="120dp"
	      	    	android:textColor="@color/secondary_text"
	            	android:background="@drawable/label_bg"/>
            
            <com.facebook.login.widget.LoginButton
                android:id="@+id/fblogin_button"
	            android:layout_width="66dp"
      	    	android:layout_height="66dp"
	            android:background="@drawable/fb_circle_bg"
	            android:layout_alignParentBottom="true"
      	    	android:layout_alignParentRight="true"
      	    	android:layout_marginBottom="290dp"
      	    	android:layout_marginRight="35dp"/>
                
                <TextView
	                android:id="@+id/google_sign_in_tv"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/GG_BUTTON_LABEL_TEXT"
	                android:textAlignment="gravity"
	                android:textSize="15sp" 
	                android:layout_alignParentBottom="true"
	      	    	android:layout_alignParentRight="true"
	      	    	android:layout_marginBottom="245dp"
	      	    	android:layout_marginRight="120dp"
	      	    	android:textColor="@color/secondary_text"
            	     android:background="@drawable/label_bg"/>
            
           	<ImageButton
           	    android:id="@+id/google_sign_in_button"
           	    android:layout_width="66dp"
           	    android:layout_height="66dp"
           	    android:layout_alignParentBottom="true"
           	    android:layout_alignParentRight="true"
           	    android:layout_marginBottom="230dp"
           	    android:layout_marginRight="35dp"
           	    android:background="@drawable/gg_circle_bg"
           	    android:src="@drawable/w_gg" />

           	  
            
            <TextView
            	     android:id="@+id/quick_sign_up_tv"
            	     style="@drawable/label_bg"
            	     android:layout_width="wrap_content"
            	     android:layout_height="wrap_content"
            	     android:layout_alignParentBottom="true"
            	     android:layout_alignParentRight="true"
            	     android:layout_marginBottom="185dp"
            	     android:layout_marginRight="120dp"
            	     android:background="@drawable/label_bg"
            	     android:text="@string/Quick_Sign_Up_Button_Text"
            	     android:textAlignment="gravity"
            	     android:textColor="@color/secondary_text"
            	     android:textSize="15sp" />
            
               <ImageButton
                   android:id="@+id/quick_sign_up_btn"
                   android:layout_width="66dp"
                   android:layout_height="66dp"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:layout_marginBottom="170dp"
                   android:layout_marginRight="35dp"
                   android:background="@drawable/q_sign_up_circle_bg"
                   android:src="@drawable/w_qregis"
                   android:textAlignment="gravity"
                   android:textColor="#FFFFFF" />
                
                 <TextView
	                android:id="@+id/sign_up_tv"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/Sign_Up_Button_Text"
	                android:textAlignment="gravity"
	                android:textSize="15sp" 
	                android:layout_alignParentBottom="true"
	       	    	android:layout_alignParentRight="true"
	      	    	android:layout_marginBottom="125dp"
	      	    	android:layout_marginRight="120dp"
	      	    	android:textColor="@color/secondary_text"
            	     android:background="@drawable/label_bg"/>
               
                <ImageButton
                    android:id="@+id/sign_up_btn"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="110dp"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/sign_up_circle_bg"
                    android:src="@drawable/w_regis"
                    android:textColor="#FFFFFF" />
            
            
            <TextView
                android:id="@+id/close_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Close"
                android:textAlignment="gravity"
                android:textSize="15sp" 
                android:layout_alignParentBottom="true"
      	    	android:layout_alignParentRight="true"
      	    	android:layout_marginBottom="57dp"
    	     	android:layout_marginRight="120dp"
      	    	android:textColor="@color/secondary_text"
            	android:background="@drawable/label_bg"/>

           
           </RelativeLayout>
        

    </FrameLayout>

    	 <TextView
    	     android:id="@+id/fab_label"
    	     android:layout_width="wrap_content"
    	     android:layout_height="wrap_content"
    	     android:layout_alignParentBottom="true"
    	     android:layout_alignParentRight="true"
    	     android:layout_marginBottom="57dp"
    	     android:layout_marginRight="120dp"
    	     android:text="@string/FAB_LABEL_TEXT"
    	     android:textColor="@color/primary_text"
    	     android:textSize="20dp" />
    	 
      	<ImageButton
      	    android:id="@+id/fab"
      	    android:layout_width="86dp"
      	    android:layout_height="86dp"
      	    android:layout_alignParentBottom="true"
      	    android:layout_alignParentRight="true"
      	    android:layout_marginBottom="25dp"
      	    android:layout_marginRight="24dp"
      	    android:background="@drawable/circle"
      	    android:src="@drawable/w_add"
      	    android:text="+"
      	    android:textAlignment="center"
      	    android:textColor="@color/mb_white"
      	    android:textSize="40sp" />

</RelativeLayout>