<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/blue_gradient_bg"
    tools:context=".Changepassword">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/beluga_background_v5" >
        
      
         <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:id="@+id/contextSideLinearLayout"
            android:layout_marginTop="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/signupacctextViewTextView"
                    android:layout_width="90dp"
                    android:layout_height="31dp"
                    android:text="@string/Enter_Ac_Type"
                    android:textAlignment="textStart"
                    android:textColor="#6ba2af"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signupacctextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_default_bg2"
                    android:hint="@string/Enter_Ac_Type"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/signuppwdTextView"
                    android:layout_width="90dp"
                    android:layout_height="31dp"
                    android:text="@string/Enter_Pwd_Type"
                    android:textAlignment="textStart"
                    android:textColor="#6ba2af"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signuppwdeditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_default_bg2"
                    android:ems="10"
                    android:hint="@string/Enter_Pwd_Type"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/signupnewpwdTextView"
                    android:layout_width="150dp"
                    android:layout_height="31dp"
                    android:text="@string/Enter_New_Pwd_Type"
                    android:textAlignment="textStart"
                    android:textColor="#6ba2af"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signupnewpwdeditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_default_bg2"
                    android:ems="10"
                    android:hint="@string/Comfirm_New_Pwd_Type"
                    android:inputType="textPassword"
                    android:maxHeight="20dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <CheckBox
                    android:id="@+id/signupcheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
            	
            
    </RelativeLayout>
    
    		<ImageButton
    		    android:id="@+id/signupreturnbtn"
    		    android:layout_width="66dp"
    		    android:layout_height="66dp"
    		    android:layout_alignParentBottom="true"
    		    android:layout_alignParentLeft="true"
    		    android:layout_marginBottom="25dp"
    		    android:layout_marginLeft="50dp"
    		    android:background="@drawable/return_circle_btn"
    		    android:src="@drawable/return_pic"
    		    android:text="+"
    		    android:textAlignment="center" />

         		<ImageButton
         		    android:id="@+id/signupcomfirmbtn"
         		    android:layout_width="66dp"
         		    android:layout_height="66dp"
         		    android:layout_alignParentBottom="true"
         		    android:layout_alignParentRight="true"
         		    android:layout_marginBottom="25dp"
         		    android:layout_marginRight="50dp"
         		    android:background="@drawable/circle"
         		    android:src="@drawable/ic_done"
         		    android:text="+"
         		    android:textAlignment="center" />

</RelativeLayout>
